2019-04-12 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSCharacterSet.m: Added declarations/implementations for
	URL*AllowedCharacterSet.
	* Headers/NSCharacterSet.h: Added declarations here for
	URL*AllowedCharacterSet
	* Source/CharSets/*: Added headers to define new charactersets.
	* Source/NSString.m: Added methods stringByRemovingPercentEncoding/
	stringByAddingPercentEncodingWithAllowedCharacterSet:
	* Header/NSString.h: Added declrations for methods mentioned above.

2019-03-29 Igor Zhukov <fsb4000@yandex.ru>

	* Source/NSDateFormatter.m:
	* configure:
	* configure.ac:
	Decrease ICU version requirements to 49 to support Windows 2000.

2019-03-25  Sergii Stoian  <stoyan255@gmail.com>

	* Resources/Lanuages/Ukrainian:
	Fix wrong \U sequence for letter 'i' and short weekdays.

2019-03-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Tools/gdomap.c:
	Fix crash in donames() when getaddrinfo returns an error.

2019-02-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/Unidoce.m: comment-out left-over debug logging.
	* Source/NSJSONSerialization.m: escape characters with codepoint
	greater than 0x7f.

2019-02-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMime.m: When encoding quoted words in a header, ensure
	we don't split multibyte utf-8 characters into separate words.
	* Tests/base/GSMime/general.m: Add test for encode/decode folded
	subject line wit a euro symbol at the fold point.

2019-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSPrivate.h:
	* Source/NSBundle.m:
	* Source/NSPathUtilities.m:
	* Source/objc-load.m:
	GSPrivateSymbolPath() simplified by removing the unused argument
	and consolidated code so that, if the class lookup via dladdr()
	fails, we fall back to use __objc_dynamic_get_symbol_path().

2019-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Fix encoded word encoding specifier
	 to be uppercase ('B' or 'Q') as pere strict RFC specification.